--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.6",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
