--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "blog-api",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "v18.16.0"
+  },
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
@@ -9,12 +12,15 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
+    "express-rate-limit": "^7.1.1",
     "express-session": "^1.17.3",
+    "helmet": "^7.0.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.2",
