--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "~4.16.1",
     "express-rate-limit": "^7.1.1",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
