--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.6",
     "nodemon": "^3.0.1",
+    "openai": "^4.16.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   },
